# nexus-agent

./: .gitignore  README.md  main.py  pyproject.toml
resource/: files.json  files_test.json
src/agents/: __init__.py  agent.py
src/knowledge/: __init__.py  ingestion.py
