[project]
name = "nexus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.12",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "google-genai>=2.8.0",
    "pypdf>=6.13.0",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]
